Disabling class verification for command-line execution. Since this is generally just used for CLI utility purposes, the risk (whatever risk could exist) is extremely low.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@3626 961051c9-f516-0410-bf72-c9f7e237a7b7